[package]
name = "mysql2databend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }
color-eyre="0.6"
regex = "1.6.0"
lazy_static="1.4"
itertools="0.10"
reqwest={version="0.11", features=["json", "blocking"]}
serde={version="1.0", features=["derive"]}
serde_json="1"
either="^1.8"